2010-12-22  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed build fix.

        [Symbian] Make sure OSAllocatorSymbian builds

        This patch only addresses the build problem.

        https://bugs.webkit.org/show_bug.cgi?id=51128 tracks the full
        (re)implementation of the Symbian allocator.

        * wtf/OSAllocatorSymbian.cpp:
        (WTF::OSAllocator::reserveUncommitted):
        (WTF::OSAllocator::reserveAndCommit):
        (WTF::OSAllocator::commit):

2010-12-22  Dan Bernstein  <mitz@apple.com>

        Changed WebKitTools to Tools.

        * JavaScriptCore.vcproj/JavaScriptCore.sln:

2010-12-22  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Mark Rowe.

        Changed WebKitTools to Tools in script build phases.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2010-12-22  Andrei Popescu  <andreip@google.com>

        Unreviewed build fix.

        Fix Chromium Linux shared library build.
        [Chromium] r74431 broke the Chromium Linux shared library build
        https://bugs.webkit.org/show_bug.cgi?id=51462

        * JavaScriptCore.gyp/JavaScriptCore.gyp:
        * JavaScriptCore.gypi:

2010-12-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r74462.
        http://trac.webkit.org/changeset/74462
        https://bugs.webkit.org/show_bug.cgi?id=51449

        broke chromium win (Requested by tonyg-cr on #webkit).

        * JavaScriptCore.gypi:

2010-12-21  Tony Gentilcore  <tonyg@chromium.org>

        Unreviewed build fix.

        [chromium] Build fix after r74431
        https://bugs.webkit.org/show_bug.cgi?id=51447

        * JavaScriptCore.gypi:

2010-12-21  Gavin Barraclough  <barraclough@apple.com>

        Windows build fix.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-12-21  Gavin Barraclough  <barraclough@apple.com>

        Windows build fix.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
