@@ -1,3 +1,13 @@
+2010-12-23  Patrick Gansterer  <paroga@webkit.org>
+
+        Unreviewed build fix for WinCE after r74360.
+
+        Move the OS(WINDOWS) section after the OS(WINCE) section
+        and add missing argument to the getStackMax call.
+
+        * wtf/StackBounds.cpp:
+        (WTF::StackBounds::initialize):
+
 2010-12-22  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
 
         Unreviewed build fix.
